# lazyarray

./: .gitignore  .hgignore  .travis.yml  LICENSE  MANIFEST.in  README  README.rst  bitbucket-pipelines.yml  changelog.txt  lazyarray.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: requirements-middle.txt  requirements-newest.txt  requirements-oldest.txt  test.yml
doc/: conf.py  developers.txt  index.txt  installation.txt  performance.txt  reference.txt  tutorial.txt
test/: performance.py  test_lazy_arrays_from_Sparse_Matrices.py  test_lazyarray.py  test_ufunc.py
