[project]
name = "lazyarray"
version = "0.7.0.dev.0"
description = "A Python package that provides a lazily-evaluated numerical array class, larray, based on and compatible with NumPy arrays."
readme = "README.rst"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
  {name = "Andrew P. Davison", email = "andrew.davison@cnrs.fr"}
]
maintainers = [
  {name = "Andrew P. Davison", email = "andrew.davison@cnrs.fr"}
]
keywords = ["lazy evaluation, array"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "numpy>=1.23.5"
]

[project.optional-dependencies]
sparse = ["scipy>=1.9.3"]
dev = ["sphinx", "pytest", "pytest-cov", "flake8", "wheel"]

[project.urls]
homepage = "https://github.com/NeuralEnsemble/lazyarray/"
documentation = "https://lazyarray.readthedocs.io/"
repository = "https://github.com/NeuralEnsemble/lazyarray/"
changelog = "https://github.com/NeuralEnsemble/lazyarray/blob/master/changelog.txt"
download = "http://pypi.python.org/pypi/lazyarray"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
